--- a/graphs.Rmd
+++ b/graphs.Rmd
@@ -58,17 +58,21 @@ outliers=c(1426,926,1586)#,1425,1946,2666)
 ggplot(data=bioassay.fac,mapping = aes(y = uterus,x = ZM,color=lab))+
   geom_boxplot()+theme_bw()+facet_wrap(~ protocol)+
   geom_text(data=bioassay.fac[outliers,],
-            aes(label=outliers,color=lab))
+            aes(label=outliers,color=lab))#+
+#  theme(legend.position="bottom",
+#       legend.title=element_blank())+
+#  scale_color_discrete(guide = guide_legend(nrow=2))
+
 #+theme(legend.position="bottom",
 #       legend.title=element_blank())
 ##caculate the mean for different group 
 #bioassay.fac %>% group_by(ZM) %>% summarize(mean=mean(uterus,na.rm=T))
 
 ##4var:EE
-ggplot(data=bioassay.fac,mapping = aes(y = uterus,x = EE,color=lab))+
-  geom_boxplot()+theme_bw()+facet_wrap(~ protocol)+
-  geom_text(data=bioassay.fac[outliers,],
-            aes(label=outliers,color=lab))
+#ggplot(data=bioassay.fac,mapping = aes(y = uterus,x = EE,color=lab))+
+#  geom_boxplot()+theme_bw()+facet_wrap(~ protocol)+
+#  geom_text(data=bioassay.fac[outliers,],
+#            aes(label=outliers,color=lab))
 #+scale_colour_discrete(guide = FALSE)
 ##caculate the mean for different group.
 #bioassay.fac %>% group_by(EE) %>% summarize(mean=mean(uterus,na.rm=T))
@@ -149,7 +153,7 @@ return(res)
 ```
 
 
-```{r part1.result, message=TRUE, warning=FALSE, paged.print=FALSE,eval=FALSE}
+```{r part1.result, message=TRUE, warning=FALSE, paged.print=FALSE,eval=FALSE,echo=FALSE}
 #0 ‘***’ 0.001 ‘**’ 0.01 ‘*’ 0.05 ‘.’ 0.1 ‘ ’ 1
 
 ##a.1
